--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 product-entry">
               <div class="categories"></div>
-              <h3 class="item-title"><font color="white">#Teman </br> Rihlahmu.</font></h3>
+              <h3 class="item-title">#Teman </br> Rihlahmu.</h3>
               <div class="btn-wrap">
-                <a href="shop.html" class="d-flex align-items-center"><font color="white">Hadirkan momen ibadah yang khusyuk dan <br> nikmati kegiatan luar ruang yang berkesan <br> hanya bersama teman rihlah mulia <i class="icon icon-arrow-io"></i></font>
+                <a href="shop.html" class="d-flex align-items-center">Hadirkan momen ibadah yang khusyuk dan <br> nikmati kegiatan luar ruang yang berkesan <br> hanya bersama teman rihlah mulia <i class="icon icon-arrow-io"></i>
                 </a>
               </div>
             </div>
