--- a/umroh.html
+++ b/umroh.html
@@ -159,8 +159,8 @@
                             </div>
                             <div class="tab-pane fade" id="nav-jadwal1" role="tabpanel" aria-labelledby="nav-jadwal-tab1">
                               <ul>
-                                <li>21 September 2024</li>
                                 <li>26 Oktober 2024</li>
+                                <li>12 November 2024</li>
                               </ul>
                             </div>
                           </div>
@@ -195,15 +195,15 @@
                             </div>
                             <div class="tab-pane fade" id="nav-profile2" role="tabpanel" aria-labelledby="nav-profile-tab2">
                               <ul>
-                                <li><strong>Pesawat :</strong>Saudia Airlines</li>
+                                <li><strong>Pesawat :</strong>Saudia Airlines/Qatar Airways</li>
                                 <li><strong>Hotel Makkah :</strong>Setaraf *3</li>
                                 <li><strong>Hotel Madinah :</strong>Setaraf *3</li>
                               </ul>
                             </div>
                             <div class="tab-pane fade" id="nav-jadwal2" role="tabpanel" aria-labelledby="nav-jadwal-tab2">
                               <ul>
-                                <li>22 September 2024 - Program 9 Hari</li>
-                                <li>25 Oktober 2024 - Program 10 Hari</li>
+                                <li>25 Oktober 2024 - Program 9 Hari</li>
+                                <li>10 November 2024 - Program 10 Hari</li>
                               </ul>
                             </div>
                           </div>
